@@ -36,17 +36,11 @@ public class ignoreRecordAttribute {
 
     public static void main(String[] args) throws Exception {
         String MAJOR_VERSION = Integer.toString(44 + Runtime.version().feature());
-        ProcessBuilder pb = ProcessTools.createJavaProcessBuilder("--enable-preview",
+        ProcessBuilder pb = ProcessTools.createJavaProcessBuilder(
             "-Xlog:class+record", "-Xshare:off", "superNotJLRecord");
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
         output.shouldContain("Ignoring Record attribute");
         output.shouldContain("because super type is not java.lang.Record");
-
-        pb = ProcessTools.createJavaProcessBuilder("--enable-preview",
-            "-Xlog:class+record", "-Xshare:off", "recordIgnoredVersion");
-        output = new OutputAnalyzer(pb.start());
-        output.shouldContain("Ignoring Record attribute");
-        output.shouldContain("because class file version is not " + MAJOR_VERSION + ".65535");
     }
 
 }
