@@ -33,11 +33,11 @@
  *          java.instrument
  * @compile ../NamedBuffer.java
  * @run main RedefineClassHelper
- * @compile --enable-preview --source ${jdk.version} Host/Host.java
- * @compile --enable-preview --source ${jdk.version} TestRecordAttrGenericSig.java
- * @run main/othervm -javaagent:redefineagent.jar -Xlog:redefine+class+record=trace --enable-preview TestRecordAttrGenericSig Host
- * @compile --enable-preview --source ${jdk.version} HostA/Host.java
- * @run main/othervm -javaagent:redefineagent.jar -Xlog:redefine+class+record=trace --enable-preview TestRecordAttrGenericSig HostA
+ * @compile Host/Host.java
+ * @compile TestRecordAttrGenericSig.java
+ * @run main/othervm -javaagent:redefineagent.jar -Xlog:redefine+class+record=trace TestRecordAttrGenericSig Host
+ * @compile HostA/Host.java
+ * @run main/othervm -javaagent:redefineagent.jar -Xlog:redefine+class+record=trace TestRecordAttrGenericSig HostA
  */
 
 /* Test Description
@@ -207,8 +207,6 @@ public class TestRecordAttrGenericSig {
                                         "            to: " + dst);
         CompilerUtils.compile(src.toPath(),
                               dst.toPath(),
-                              false /* don't recurse */,
-                              "--enable-preview",
-                              "--source", VERSION);
+                              false /* don't recurse */);
     }
 }
