@@ -28,8 +28,8 @@
  * @library /tools/lib
  * @modules jdk.compiler/com.sun.tools.javac.util
  *          jdk.jdeps/com.sun.tools.classfile
- * @compile --enable-preview -source ${jdk.version} ApplicableAnnotationsOnRecords.java
- * @run main/othervm --enable-preview ApplicableAnnotationsOnRecords
+ * @compile ApplicableAnnotationsOnRecords.java
+ * @run main ApplicableAnnotationsOnRecords
  */
 import com.sun.tools.classfile.*;
 import com.sun.tools.javac.util.Assert;
