@@ -48,8 +48,7 @@ public class PubApisTest {
 
     public static void main(String[] args) throws Throwable {
         javax.tools.JavaCompiler c = ToolProvider.getSystemJavaCompiler();
-        JavacTask t = (JavacTask) c.getTask(null, null, null,
-                List.of("--enable-preview", "-source", Integer.toString(Runtime.version().feature())), null,
+        JavacTask t = (JavacTask) c.getTask(null, null, null, null, null,
                 List.of(new SimpleJavaFileObject(URI.create("TestClass.java"), JavaFileObject.Kind.SOURCE) {
             @Override
             public CharSequence getCharContent(boolean ignoreEncodingErrors) throws IOException {
